feat: Implement team management functionality with create, update, delete, and member management features
- Added CreateTeamDto and UpdateTeamDto for team creation and updates.
- Created Team entity with relationships to users and hosts.
- Developed TeamController with endpoints for team operations.
- Implemented TeamService with business logic for team management.
- Added frontend components for organization creation, dashboard, and member management.
- Integrated subscription management with plans and payment processing.
- Styled components for better user experience in subscription and organization management.

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "start:dev": "nest start --watch",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
+    "migrate:commercial": "node scripts/migrate-commercial.js",
+    "migrate:data-commercial": "node scripts/migrate-data-commercial.js",
     "seed": "ts-node src/users/seed.ts"
   },
   "dependencies": {
