feat: implement team management functionality with controller, service, and entity definitions
- Added Team, UserTeam, and HostTeam entities to manage team-related data.
- Created TeamController to handle team operations such as creating, updating, and deleting teams, as well as managing team members and hosts.
- Developed TeamService to encapsulate business logic for team management, including permission checks and interactions with the database.
- Integrated Prisma for database operations related to teams, users, and hosts.
- Added necessary DTOs for creating and updating teams.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@types/compression": "^1.8.1"
   },
   "dependencies": {
+    "@types/stripe": "^8.0.416",
     "nodemailer": "^7.0.6",
+    "stripe": "^18.5.0",
     "xlsx": "^0.18.5"
   }
 }
