--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.22.0",
     "@types/compression": "^1.8.1",
+    "@types/stripe": "^8.0.416",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -38,6 +39,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "stripe": "^18.5.0",
     "web-push": "^3.6.7",
     "xlsx": "^0.18.5"
   },
