--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@types/stripe": "^8.0.416",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
