--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^11.0.5",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.4",
