--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,8 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "target": "ES2020",
     "sourceMap": true,
