feat: Add Recent Activities and Stats Cards components for dashboard overview
feat: Implement Help Center with guided tours and FAQs for user assistance

feat: Create TourOverlay component for guided tours with tooltip positioning

feat: Develop Notification Center for real-time notifications and alerts

feat: Introduce useDashboard hook for fetching dashboard data

feat: Establish help store with guided tour management and state persistence

feat: Set up notifications store with socket integration for real-time updates

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # MySQL: mysql://USER:PASS@HOST:PORT/DBNAME
-DATABASE_URL="mysql://root:P@ssw0rd123@192.168.17.17:3306/hosting_db"
+DATABASE_URL="mysql://root:@localhost:3306/hosting_db"
 
 # JWT
 JWT_SECRET="super-long-random-jwt-secret-key-should-be-kept-secure"
