--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^11.0.5",
-    "zustand": "^4.5.2"
+    "socket.io-client": "^4.8.1",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
